# deepgram-voice-keyboard

./: .gitignore  Cargo.toml  GUI_README.md  INSTALL.md  install.sh  run.sh  update.sh
app/: Cargo.toml  GUI_README.md  README.md  voice-keyboard-gui.desktop
app/src/: audio_input.rs  gui.rs
src/: gui.rs
