[package]
name = "voice-keyboard"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "voice-keyboard"
path = "src/main.rs"

[[bin]]
name = "voice-keyboard-gui"
path = "src/gui.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
cpal = "0.15"
libc = "0.2"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
nix = { version = "0.27", features = ["user", "fs", "ioctl"] }
regex = "1.0"
http = "1"
iced = "0.13"
directories = "5.0"
global-hotkey = "0.6"
rodio = "0.19"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
