[package]
name = "voice-keyboard"
version = "0.1.0"
edition = "2021"
description = "Linux virtual keyboard driver for voice dictation with Deepgram Flux STT API"
license = "ISC"
repository = "https://github.com/danielrosehill/deepgram-voice-keyboard"
homepage = "https://github.com/danielrosehill/deepgram-voice-keyboard"
readme = "README.md"

[[bin]]
name = "voice-keyboard"
path = "src/main.rs"

[[bin]]
name = "voice-keyboard-gui"
path = "src/gui.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
cpal = "0.15"
libc = "0.2"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
nix = { version = "0.27", features = ["user", "fs", "ioctl"] }
regex = "1.0"
http = "1"
iced = "0.13"
directories = "5.0"
global-hotkey = "0.6"
rodio = "0.19"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.deb]
maintainer = "Daniel Rosehill <public@danielrosehill.com>"
copyright = "2025, Deepgram & Daniel Rosehill"
license-file = ["LICENSE.txt", "4"]
extended-description = """\
Voice Keyboard is a Linux virtual keyboard driver that types what you say \
using Deepgram's Flux STT API. The GUI provides an easy-to-use interface \
for controlling voice dictation with persistent API key storage and global \
hotkey support (default: F13). Features audible beep feedback and works \
with all Linux applications."""
depends = "libasound2, pkexec"
section = "utils"
priority = "optional"
assets = [
    ["target/release/voice-keyboard", "usr/bin/", "755"],
    ["target/release/voice-keyboard-gui", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/voice-keyboard/", "644"],
    ["GUI_README.md", "usr/share/doc/voice-keyboard/", "644"],
    ["LICENSE.txt", "usr/share/doc/voice-keyboard/", "644"],
    ["voice-keyboard-gui.desktop", "usr/share/applications/", "644"],
]
